[gd_scene load_steps=16 format=3 uid="uid://b3takxcv8775i"]

[ext_resource type="Script" path="res://scripts/Profile.gd" id="1_5238s"]
[ext_resource type="Texture2D" uid="uid://bk562ybu681k7" path="res://assets/galaxy.jpg" id="1_ss2rd"]
[ext_resource type="Texture2D" uid="uid://ssbko6e4fmyc" path="res://assets/kenney_game-icons/PNG/White/2x/singleplayer.png" id="2_l7gnb"]
[ext_resource type="Texture2D" uid="uid://3hcxqwu5dyjt" path="res://assets/kenney_game-icons/PNG/White/2x/buttonStart.png" id="3_sv4gf"]
[ext_resource type="Texture2D" uid="uid://c34w3kxvgnb5g" path="res://assets/kenney_game-icons/PNG/White/2x/exitLeft.png" id="4_fmk5t"]
[ext_resource type="FontFile" uid="uid://d153mdm4tperu" path="res://assets/Rubik_Distressed/RubikDistressed-Regular.ttf" id="5_cehmr"]
[ext_resource type="Script" path="res://scripts/Configuration.gd" id="7_dc3co"]
[ext_resource type="Script" path="res://scenes/AccountInfo.gd" id="7_g206g"]
[ext_resource type="Texture2D" uid="uid://b6onxqe4gxcvd" path="res://assets/kenney_game-icons/PNG/White/2x/left.png" id="8_popqi"]
[ext_resource type="Texture2D" uid="uid://dwi4l1jm01fo8" path="res://assets/kenney_game-icons/PNG/White/2x/movie.png" id="9_j4fin"]
[ext_resource type="Texture2D" uid="uid://cm3ablcos8ytg" path="res://assets/kenney_game-icons/PNG/White/2x/right.png" id="10_keusy"]
[ext_resource type="Script" path="res://scripts/Accessibility.gd" id="11_vpjd4"]
[ext_resource type="Texture2D" uid="uid://d2nih2gqu6gku" path="res://assets/kenney_game-icons/PNG/White/2x/checkmark.png" id="12_exrod"]
[ext_resource type="Texture2D" uid="uid://s16sriuxhbn8" path="res://assets/kenney_game-icons/PNG/White/2x/cross.png" id="13_1aga0"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_me1oa"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="Profile" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_5238s")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1090.0
offset_bottom = 1928.0
texture = ExtResource("1_ss2rd")

[node name="ProfilePicture" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 412.0
offset_top = 62.0
offset_right = 678.0
offset_bottom = 328.0
texture = ExtResource("2_l7gnb")

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 22.0
offset_top = 26.0
offset_right = 197.0
offset_bottom = 191.0
theme_override_font_sizes/font_size = 50
theme_override_icons/icon = ExtResource("3_sv4gf")
icon = ExtResource("4_fmk5t")
flat = true
icon_alignment = 1
expand_icon = true

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_top = 400.0
offset_right = 1090.0
offset_bottom = 409.0

[node name="TabBackground" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_top = 336.0
offset_right = 1090.0
offset_bottom = 1928.0
color = Color(0.787759, 0.787759, 0.787759, 1)

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_left = 79.0
offset_top = 562.0
offset_right = 1016.0
offset_bottom = 1172.0
theme_override_fonts/font = ExtResource("5_cehmr")
theme_override_font_sizes/font_size = 40
theme_override_styles/panel = SubResource("StyleBoxFlat_me1oa")
current_tab = 0

[node name="Account Info" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
script = ExtResource("7_g206g")
metadata/_tab_index = 0

[node name="Spacer" type="Control" parent="TabContainer/Account Info"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Name Field" type="HBoxContainer" parent="TabContainer/Account Info"]
layout_mode = 2

[node name="Spacer" type="Control" parent="TabContainer/Account Info/Name Field"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="label_name" type="Label" parent="TabContainer/Account Info/Name Field"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_cehmr")
theme_override_font_sizes/font_size = 40
text = "Name"

[node name="Spacer2" type="Control" parent="TabContainer/Account Info/Name Field"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="user_name" type="Label" parent="TabContainer/Account Info/Name Field"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_cehmr")
theme_override_font_sizes/font_size = 40
text = "John Doe"

[node name="Spacer2" type="Control" parent="TabContainer/Account Info"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Region Field" type="HBoxContainer" parent="TabContainer/Account Info"]
layout_mode = 2

[node name="Spacer" type="Control" parent="TabContainer/Account Info/Region Field"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="label_email" type="Label" parent="TabContainer/Account Info/Region Field"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_cehmr")
theme_override_font_sizes/font_size = 40
text = "Email"

[node name="Spacer2" type="Control" parent="TabContainer/Account Info/Region Field"]
custom_minimum_size = Vector2(305, 0)
layout_mode = 2

[node name="user_email" type="Label" parent="TabContainer/Account Info/Region Field"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_cehmr")
theme_override_font_sizes/font_size = 40
text = "a@a.com"

[node name="Spacer4" type="Control" parent="TabContainer/Account Info"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Member Since Field" type="HBoxContainer" parent="TabContainer/Account Info"]
layout_mode = 2

[node name="Spacer" type="Control" parent="TabContainer/Account Info/Member Since Field"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="label_since" type="Label" parent="TabContainer/Account Info/Member Since Field"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_cehmr")
theme_override_font_sizes/font_size = 40
text = "Member since"

[node name="Spacer2" type="Control" parent="TabContainer/Account Info/Member Since Field"]
custom_minimum_size = Vector2(130, 0)
layout_mode = 2

[node name="user_since" type="Label" parent="TabContainer/Account Info/Member Since Field"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_cehmr")
theme_override_font_sizes/font_size = 40
text = "Jan 1, 2025"

[node name="Spacer5" type="Control" parent="TabContainer/Account Info"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="logout_button" type="Button" parent="TabContainer/Account Info"]
layout_mode = 2
theme_override_font_sizes/font_size = 60
text = "Log Out"

[node name="Configuration" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("7_dc3co")
metadata/_tab_index = 1

[node name="Spacer" type="Control" parent="TabContainer/Configuration"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="Salient Label" type="Label" parent="TabContainer/Configuration"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_cehmr")
theme_override_font_sizes/font_size = 40
text = "Salient"
horizontal_alignment = 1

[node name="SalientBox" type="CenterContainer" parent="TabContainer/Configuration"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Configuration/SalientBox"]
layout_mode = 2

[node name="SalientLeftButton" type="Button" parent="TabContainer/Configuration/SalientBox/HBoxContainer"]
layout_mode = 2
theme_override_icons/icon = ExtResource("8_popqi")

[node name="SalientImage" type="TextureRect" parent="TabContainer/Configuration/SalientBox/HBoxContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
texture = ExtResource("9_j4fin")

[node name="SalientRightButton" type="Button" parent="TabContainer/Configuration/SalientBox/HBoxContainer"]
layout_mode = 2
theme_override_icons/icon = ExtResource("10_keusy")

[node name="Spacer2" type="Control" parent="TabContainer/Configuration"]
custom_minimum_size = Vector2(0, 75)
layout_mode = 2

[node name="Control Label" type="Label" parent="TabContainer/Configuration"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_cehmr")
theme_override_font_sizes/font_size = 40
text = "Control"
horizontal_alignment = 1

[node name="ControlBox" type="CenterContainer" parent="TabContainer/Configuration"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Configuration/ControlBox"]
layout_mode = 2

[node name="ControlLeftButton" type="Button" parent="TabContainer/Configuration/ControlBox/HBoxContainer"]
layout_mode = 2
theme_override_icons/icon = ExtResource("8_popqi")

[node name="ControlImage" type="TextureRect" parent="TabContainer/Configuration/ControlBox/HBoxContainer"]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2
texture = ExtResource("9_j4fin")

[node name="ControlRightButton" type="Button" parent="TabContainer/Configuration/ControlBox/HBoxContainer"]
layout_mode = 2
theme_override_icons/icon = ExtResource("10_keusy")

[node name="Accessibility" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
script = ExtResource("11_vpjd4")
sprite_on = ExtResource("12_exrod")
sprite_off = ExtResource("13_1aga0")
metadata/_tab_index = 2

[node name="Spacer" type="Control" parent="TabContainer/Accessibility"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Colorblind Field" type="HBoxContainer" parent="TabContainer/Accessibility"]
layout_mode = 2

[node name="Spacer" type="Control" parent="TabContainer/Accessibility/Colorblind Field"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Colorblind" type="Label" parent="TabContainer/Accessibility/Colorblind Field"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_cehmr")
theme_override_font_sizes/font_size = 40
text = "Colorblind       "

[node name="Spacer2" type="Control" parent="TabContainer/Accessibility/Colorblind Field"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="ColorblindButton" type="TextureButton" parent="TabContainer/Accessibility/Colorblind Field"]
layout_mode = 2

[node name="Spacer2" type="Control" parent="TabContainer/Accessibility"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Music Field" type="HBoxContainer" parent="TabContainer/Accessibility"]
layout_mode = 2

[node name="Spacer" type="Control" parent="TabContainer/Accessibility/Music Field"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="Music" type="Label" parent="TabContainer/Accessibility/Music Field"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_cehmr")
theme_override_font_sizes/font_size = 40
text = "Music                     "

[node name="Spacer2" type="Control" parent="TabContainer/Accessibility/Music Field"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="MusicButton" type="TextureButton" parent="TabContainer/Accessibility/Music Field"]
layout_mode = 2

[node name="Spacer3" type="Control" parent="TabContainer/Accessibility"]
custom_minimum_size = Vector2(0, 35)
layout_mode = 2

[node name="Sound Effect Field" type="HBoxContainer" parent="TabContainer/Accessibility"]
layout_mode = 2

[node name="Spacer" type="Control" parent="TabContainer/Accessibility/Sound Effect Field"]
custom_minimum_size = Vector2(50, 0)
layout_mode = 2

[node name="SoundEffect" type="Label" parent="TabContainer/Accessibility/Sound Effect Field"]
layout_mode = 2
theme_override_fonts/font = ExtResource("5_cehmr")
theme_override_font_sizes/font_size = 40
text = "Sound Effect "

[node name="Spacer2" type="Control" parent="TabContainer/Accessibility/Sound Effect Field"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2

[node name="SoundEffectButton" type="TextureButton" parent="TabContainer/Accessibility/Sound Effect Field"]
layout_mode = 2

[connection signal="pressed" from="TabContainer/Account Info/logout_button" to="." method="_on_logout_button_pressed"]
